updates to design

--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -78,30 +78,35 @@ Lifestyleptllc@aol.com
         <p class="center">Don't want to join a gym? </br> Welcome to <br/><span id="company"><em><strong>Lifestyle Personal Training</strong></em><span>
         </br> The most affordable personal training professionals in the Chicagoland area.
         </p>
-        <button id="morebutton" class="center btn btn-primary btn-lg" href="#about" role="button">Learn more &raquo;</button>
+        <!--Hiding Button to Jumpt to about 
+        <button id="morebutton" class="center btn btn-primary btn-lg" href="#about" role="button">Learn more <img class="downarrow" src="../Assets/images/arrow.png"/></button>
+
+        -->
       </div>
     </div>
 
     <div class="container-fluid">
-
-<div id="about" class="container-fluid">
+<a class="anchor" id="about"></a>
+<div id="aboutsection" class="container-fluid">
     
       <h2 class="center">Train Better</h2>
-    <div class="center">
+    <div class="center moreinfo col-sm-10 offset-sm-1 col-md-12">
       <p>Our focus is on overall health, so no matter what your goals, we will help you achieve them.  This overall approach to health and fitness will begin to develop your body immediately.
-      <br>With our help, you will begin feeling energized after just one visit and will notice visible results within just a few short weeks.
-      <br>Let us help you reach the physical and mental potential that you only dreamed of.   At Lifestyle Personal Training, anything is possible.
+      <br>With our help, you will begin feeling energized after just one visit and will notice visible results within just a few short weeks. </br>
+      <br>Let us help you reach the physical and mental potential that you only dreamed of.   At Lifestyle Personal Training, anything is possible. </br>
       <br>Contact us today to meet with your own personal trainer and begin to plan the road to a healthier, happier you!
     </div>
     
 </div>
 <div id="email" class="container-fluid">
    <form>
-            <div class="form-group">
-              <input type="email" placeholder="Email" class="form-control">
+            <div class="form-group input-group">
+                <input type="email" placeholder="Email" class="form-control">
+              <span class="input-group-btn">
+                <button type="submit" class="btn btn-success">Sign Up For More Info
+                </button>
+              </span>
             </div>
-            <button type="submit" class="btn btn-success">Sign Up For More Info
-            </button>
     </form>
 </div>
 <!-- <div id="socialmediabanner">
@@ -120,7 +125,8 @@ Lifestyleptllc@aol.com
 
 
  <!-- Page Content -->
-    <div class="container" id="team">
+ <a class="anchor" id="team"></a>
+    <div class="container" id="teamsection">
 
         <!-- Team Members Row -->
         <div class="row">
@@ -197,11 +203,11 @@ Dan has a passion to help people reach their fitness goals and is passionate and
                 <p>Coach Izzy is a Certified Personal Trainer through The National Academy of Sports Medicine. She also had her Corrective Exercise Specialization which allows her to work with individuals with past injuries and can help individuals after physical therapy. Coach Izzy also had her Bachelor of Arts is Psychology and Sociology which give her a unique perspective into health and wellness. Izzy has lost over 130 pounds and understands the struggle better than others. </p>
             </div>
         </div>
-
+</div>
         <hr>
 
 <div class="container-fluid signupfullwidth">
-	<p>Ready to get started?</p>
+	<h1>Ready to get started?</h1>
 	<button><a href="#contact">Get A Personal Trainer</a></button>
   
   <p> Contact us today to meet with your own personal trainer and begin to plan the road to a healthier, happier you!</p>
@@ -239,8 +245,8 @@ Contact us for affordable pricing!
 -->
 
 <!--Contact Us-->
-
-<div id="testimonials">
+<a class="anchor" id="testimonials"></a>
+<div id="testimonialssection">
   <div class="container">
   <div class="row">
     <div class='col-md-offset-2 col-md-8 text-center'>
@@ -358,9 +364,8 @@ I have never felt this healthy in my whole life. I can finally say I really love
 </p>
 
 
--->
 
-</div>
+</div> -->
 
 <div class="container" id="contact">
 
