updated about section columns, cleaned up google maps for test

--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -13,7 +13,24 @@
     <!-- LPT's CSS File-->
     <link href="../CSS/main3.css" rel="stylesheet">
     <!-- LPT Favicon to Browser Tab-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
+      <link rel="apple-touch-icon" sizes="57x57" href="../Assets/images/lptfavicon/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="../Assets/images/lptfavicon/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="../Assets/images/lptfavicon/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="../Assets/images/lptfavicon/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="../Assets/images/lptfavicon/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="../Assets/images/lptfavicon/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="../Assets/images/lptfavicon/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="../Assets/images/alptfavicon/pple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="../Assets/images/lptfavicon/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="../Assets/images/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="../Assets/images/lptfavicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="../Assets/images/lptfavicon/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="../Assets/images/lptfavicon/favicon-16x16.png">
+      <link rel="manifest" href="../Assets/images/lptfavicon/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="../Assets/images/lptfavicon/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
   </head>
 <body>
 
@@ -140,7 +157,7 @@
             </div>
         <div class="row">
            <!--Trainer: Joe Alagno-->
-            <div class="col-lg-6 col-sm-6 text-left clearfix">
+            <div class="col-sm-6 text-left trainer">
                   <img class="img-responsive img-center" src="../Assets/images/Joesquare.jpg" alt="Joe Alagno">
                   <h3 class="text-center">Joe Alagno</h3>
                   <p>I am the owner and operator of Lifestyle Personal Training.  I have a Bachelors degree in Exercise Science and am an ACE certified personal trainer. Since LPT was established in 2002, I have had great success in helping individuals of all ages obtain their health and fitness goals. My Client Experience includes: 
@@ -155,27 +172,28 @@
                   Overall health is my main focus so you will not only achieve your fitness goals but enjoy a healthier, happier life. I look forward to helping you overcome any health hurdles you may have and guide you down the path to the best shape of your life.
                   </p>
             </div>
-            <div class="clearfix visible-lg-block visible-md-block"></div>
 
             <!--Trainer Justin Malec-->
-            <div class="col-lg-6 col-sm-6 text-left clearfix">
+            <div class="col-sm-6 text-left trainer">
                 <img class="img-circle img-responsive img-center" src="../Assets/images/Justinsquare.jpg" alt="Justin Malec">
                 <h3 class="text-center">Justin Malec</h3>
                 <p>I am an ACE certified personal trainer. I work to fit the needs of my clients through athletic performance, weight loss, muscle toning and health related issues. </br> As a division I collegiate sprinter I gained valuable experience in training for speed, strength and flexibility. My other coaching experiences include being a head coach for a youth football team and training elite track sprinters. Currently, I am a varsity football and track coach at Sandburg High School. The part of training that excites me is the variety of clients that I have been able to work with and help them succeed in reaching their goals.
                 </p>
             </div>
-            <div class="clearfix visible-lg-block visible-md-block"></div>
+      </div> <!--end row-->
+            <div class="clearfix visible-sm-block"></div>
 
             <!-- Trainer Sarah -->
-            <div class="col-lg-4 col-sm-4 text-left clearfix">
-                <img class="img-circle img-responsive img-center" src="../Assets/images/sarahsquare.jpg" alt="Sarah">
-                <h3 class="text-center">Sarah</h3>
+      <div class="row">
+            <div class="col-sm-4 text-left trainer">
+                <img class="img-circle img-responsive img-center" src="../Assets/images/sarahsquare.jpg" alt="Sarah Burke">
+                <h3 class="text-center">Sarah Burke</h3>
                 <p>Hi! I am a NASM Certified Personal Trainer who promotes body confidence and views fitness as a journey. My main goals are to both motivate you and give you the tools you need to reach and surpass your fitness goals. Previously a collegiate pitcher, I am well versed in goal setting and instilling mental toughness into whoever I coach and train. I remain involved in softball as an instructor for pitching, hitting, and fielding where I implement my knowledge as a Personal Trainer into my lessons.
                 </p>
             </div>
 
             <!-- Trainer Dan Atkenson -->
-            <div class="col-lg-4 col-sm-4 text-left clearfix">
+            <div class="col-sm-4 text-left trainer">
                 <img class="img-circle img-responsive img-center" src="../Assets/images/Dansquare.jpg" alt="Dan Atkenson">
                 <h3 class="text-center">Dan Atkenson</h3>
                 <p>Dan is a native of Crestwood, IL and a graduate of Carl Sandburg High School where he played baseball and basketball. He was a pitcher on the baseball team and was selected as MVP in IHSA State Championship in 2002. After high school, Dan attended Northern Illinois University where he received a degree in Preventive and Rehabilitative Exercise Science. During his time there, Dan also was a pitcher on the baseball team. Dan got many awards on and off the field including Huskie Scholar 4 years in a row and was an NSCA All American voted by staff from Northern as "the first to arrive and last to leave in the weight room". </br> Dan has a passion to help people reach their fitness goals and is passionate and dedicated to helping you TODAY!
@@ -183,12 +201,13 @@
             </div>
 
             <!-- Trainer Izzy -->
-            <div class="col-lg-4 col-sm-4 text-left clearfix">
-                <img id="izzy" class="img-circle img-responsive img-center" src="../Assets/images/izzysquare.jpg" alt="Izzy">
-                <h3 class="text-center">Coach Izzy
+            <div class="col-sm-4 text-left trainer">
+                <img id="izzy" class="img-circle img-responsive img-center" src="../Assets/images/izzysquare.jpg" alt="Izzy Jamrocha">
+                <h3 class="text-center">Izabella Jamrocha
                 </h3>
                 <p>Coach Izzy is a Certified Personal Trainer through The National Academy of Sports Medicine. She also had her Corrective Exercise Specialization which allows her to work with individuals with past injuries and can help individuals after physical therapy. Coach Izzy also had her Bachelor of Arts is Psychology and Sociology which give her a unique perspective into health and wellness. Izzy has lost over 130 pounds and understands the struggle better than others.</p>
             </div>
+            <div class="clearfix visible-sm-block"></div>
         </div>
 </div>
 
@@ -436,7 +455,7 @@ I have never felt this healthy in my whole life. I can finally say I really love
 
 <!--FOOTER OF PAGE -->
 
-   <footer class="footer" style="background-image: url('assets/img/fashion/bg-footer.jpg')">
+   <footer class="footer">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
@@ -444,7 +463,7 @@ I have never felt this healthy in my whole life. I can finally say I really love
                     <p>(708) 620 - 4 FIT // (708) 620 - 4348</p>
                 </div>
                 <div class="col-md-4 contact-details">
-                    <h4><i class="fa fa-map-marker"></i> We can come to you</br> Or Visit</h4>
+                    <h4><i class="fa fa-map-marker"></i> We'll come to you!</br> Or Visit</h4>
                     <p>8685 Springlake Dr.
                         <br>Mokena, IL 60448</p>
                 </div>
@@ -490,15 +509,13 @@ I have never felt this healthy in my whole life. I can finally say I really love
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../JAVASCRIPT/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCswDjVQdCL1xosCPwvO9Ir-swo7k8mFRs&callback=initMap"></script>
 <script>
 $(function () {
 
     function initMap() {
 
-        var location = new google.maps.LatLng(41.652656, -87.870833);
-
-        var mapCanvas = document.getElementById('map');
+        var location = {lat: 41.652656, lng: -87.870833};
         var mapOptions = {
             center: location,
             zoom: 12,
@@ -506,7 +523,8 @@ $(function () {
             scrollwheel: false,
             mapTypeId: google.maps.MapTypeId.ROADMAP
         }
-        var map = new google.maps.Map(mapCanvas, mapOptions);
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
 
         var markerImage = '../Assets/LPTsmall.png';
 
@@ -526,7 +544,8 @@ $(function () {
         var infowindow = new google.maps.InfoWindow({
             content: contentString,
             maxWidth: 400
-        });
+        }); 
+        
 
         marker.addListener('click', function () {
             infowindow.open(map, marker);
@@ -534,8 +553,10 @@ $(function () {
 
         // var styles = [{"featureType": "landscape", "stylers": [{"saturation": 50}, {"lightness": 65}, {"visibility": "on"}]}, {"featureType": "poi", "stylers": [{"saturation": 50}, {"lightness": 51}, {"visibility": "simplified"}]}, {"featureType": "road.highway", "stylers": [{"saturation": 50}, {"visibility": "simplified"}]}, {"featureType": "road.arterial", "stylers": [{"saturation": 50}, {"lightness": 30}, {"visibility": "on"}]}, {"featureType": "road.local", "stylers": [{"saturation": 50}, {"lightness": 40}, {"visibility": "on"}]}, {"featureType": "transit", "stylers": [{"saturation": 50}, {"visibility": "simplified"}]}, {"featureType": "administrative.province", "stylers": [{"visibility": "off"}]}, {"featureType": "water", "elementType": "labels", "stylers": [{"visibility": "on"}, {"lightness": -25}, {"saturation": 50}]}, {"featureType": "water", "elementType": "geometry", "stylers": [{"hue": "#ffff00"}, {"lightness": -25}, {"saturation": 97}]}];
 
-        map.set('styles', styles);
-
+        // map.set('styles', styles);
+        // https://support.google.com/googleapi/answer/6310037
+        // https://developers.google.com/maps/documentation/javascript/styling
+        // https://developers.google.com/maps/documentation/javascript/reference#MapOptions
 
     }
 
