--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -328,42 +328,61 @@ Contact us for affordable pricing!
   </div>
 </div>
 
-<!-- ADDITONAL TESTIMONIALS 
+<!-- ACCORDIAN OF TESTIMONIALS -->
 
+<button class="accordion">
+  <h2>Jessica B.</h2>
+  <p>"I am in the best shape of my life at 34 years old"</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>I hired LPT to lose a little weight. Never did I think I would not only lose the weight, but the muscle definition I have attained is unbelievable. I could never have done this on my own. Not only did LPT help transform my body, but they also gave a wealth of information on nutrition and healthy living and has educated my mind, not just my body. LPT is definitely an investment for your future. I am in the best shape of my life at 34 years old.</p>
+</div>
 
-    <p>
+<button class="accordion">
+  <h2>Debbie S.</h2>
+  <p>"I was wearing a size 14; now I am wearing a size 8!"</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>Like many people, I have struggled with my weight my entire life. When I got engaged I was at my highest weight ever and was determined to get into shape before my wedding, but I new I couldn't do it alone.</br> I heard of Lifestyle Personal Training and decided to give them a try. While training, my goals changed from just wanting to lose weight for the wedding to a desire to lead a healthier life overall.</br>The trainers at LPT love what they do and share their knowledge with you so, when you do have to go off on your own, you will be successful.</br> When I started with Lifestyle Personal Training I was wearing a size 14; now I am wearing a size 8! LPT supported me and helped me get into the best shape of my life and I have never felt better.</p>
+</div>
 
-"I hired LPT to lose a little weight. Never did I think I would not only lose the weight, but the muscle definition I have attained is unbelievable.
+<button class="accordion">
+  <h2>Stacy J.</h2>
+  <p>"I have never felt this healthy in my whole life. I can finally say I really love to go shopping!"</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>After having two kids and struggling with my weight for 9 years, I thought enough was enough. I was finally ready to be committed to losing weight. I knew I would need a little help, but a little is not what LPT gave me. They gave me a whole lot more: a ton of motivation, education on what to eat, and how to transform my whole personal appearance. They have so much knowledge in this field that I learned something new every time we worked out.</br>Being a hair dresser, I think it's awesome when my clients ask me for advice on how to lose weight and eat healthy. I actually feel great after working out and guilty if I don't.</br>I have never felt this healthy in my whole life. I can finally say I really love to go shopping!</p>
+</div>
 
-I could never have done this on my own. Not only did LPT help transform my body, but they also gave a wealth of information on nutrition and healthy living and has educated my mind, not just my body. LPT is definitely an investment for your future. I am in the best shape of my life at 34 years old."
+<button class="accordion">
+  <h2>Heidi S.</h2>
+  <p>"Take it from a true exercise skeptic…LPT has converted me into an exercise worshipper!!!"</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>I have one word to describe personal training with Lifestyle Personal Training…Phenomenal!!!  I was probably the biggest skeptic around about exercise & the benefits of exercise & proper nutrition before I started working out with LPT. </br> Summer hit, and I decided I was sick of eating bad, and, quite frankly, looking completely out of shape.  LPT trainers are excellent motivators.  I was hitting a Size 8 or 10 prior to training with them.  In just two and a half months I have dropped down to a Size 2. </br>I have never felt better BOTH physically and mentally since I started training with LPT.  I’m no longer sluggish, my focus/concentration at work is now phenomenal, and I look great!  Also, I now actually look forward to working out!!!  Additionally, an added bonus is that LPT is really knowledgeable about exercise & nutrition…They definitely know their stuff!!!  Take it from a true exercise skeptic…LPT has converted me into an exercise worshipper!!!  I highly, highly recommend Lifestyle Personal Training!!!</p>
+</div>
 
-- Jessica B.
+<button class="accordion">
+  <h2>Rasa</h2>
+  <p>"LPT made exercising fun!"</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>I started Lifestyle Personal Training's "Biggest Loser Competition" because I needed my body and life to change.  I set a course to get back to the basics of weight loss, more exercise, better nutrition, and fewer empty calories Lifestyle Personal Training helped me with a positive attitude.  The first month was hard physically, the second was hard mentally, but the third was the easiest because I started seeing changes in my body, started feeling better, and had more energy!  LPT made exercising fun!</p>
+</div>
 
-"Like many people, I have struggled with my weight my entire life. When I got engaged I was at my highest weight ever and was determined to get into shape before my wedding, but I new I couldn't do it alone.
-
-I heard of Lifestyle Personal Training and decided to give them a try. While training, my goals changed from just wanting to lose weight for the wedding to a desire to lead a healthier life overall.
-
-The trainers at LPT love what they do and share their knowledge with you so, when you do have to go off on your own, you will be successful.
-
-When I started with Lifestyle Personal Training I was wearing a size 14; now I am wearing a size 8! LPT supported me and helped me get into the best shape of my life and I have never felt better. "
-
-- Debbie S.
-
-"After having two kids and struggling with my weight for 9 years, I thought enough was enough. I was finally ready to be committed to losing weight. I knew I would need a little help, but a little is not what LPT gave me. They gave me a whole lot more: a ton of motivation, education on what to eat, and how to transform my whole personal appearance.
-
-They have so much knowledge in this field that I learned something new every time we worked out.
-
-Being a hair dresser, I think it's awesome when my clients ask me for advice on how to lose weight and eat healthy. I actually feel great after working out and guilty if I don't.
-
-I have never felt this healthy in my whole life. I can finally say I really love to go shopping!"
-
-- Stacy J.
-</p>
-
-
-
-</div> -->
-
+<button class="accordion">
+  <h2>Lenal B.</h2>
+  <p>"It does make a difference.... I believe it saved my life."</p>
+  <p>Read More</p>
+</button>
+<div class="panel">
+  <p>Lifestyle Personal Training has changed my life. I'm diabetic, have high blood pressure and high cholesterol. From working out with LPT, I have cut my blood pressure medication in half, I have cut my blood sugar medication from 1,000mg a day to 250mg and have eliminated one of the two medications I take for cholesterol.</br>When walking into work from my car, I would have to walk so slow because I would run out of breath. Now I walk 2 miles everyday on my lunch break. I have also participated in a 4 mile walk for charity.</br>LPT is not only there for the exercise, but also they're there for emotional support and guidance. Their commitment to me brings out the fight and commitment within myself.</br>I've struggled all my life with my weight. Dieting on and off, and maybe exercising. Not really understanding what a difference a proper workout can make. It does make a difference.... I believe it saved my life.</p>
+</div>
 
 <!-- CONTACT FORM -->
 
@@ -512,6 +531,24 @@ I have never felt this healthy in my whole life. I can finally say I really love
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCswDjVQdCL1xosCPwvO9Ir-swo7k8mFRs&callback=initMap"></script>
 <script>
 $(function () {
+
+  // FOR ACCORDIAN DISPLAY OF TESTIMONIALS
+    var acc = $(".accordion");
+    var i;
+
+      for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function() {
+          $(this).toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.maxHeight){
+            panel.style.maxHeight = null;
+          } else {
+            panel.style.maxHeight = panel.scrollHeight + "px";
+          } 
+        }
+      }
+    
+//FOR GOOGLE MAPS
 
     function initMap() {
 
