added scroll spy for navbar

--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -32,10 +32,10 @@
       <meta name="msapplication-TileImage" content="../Assets/images/lptfavicon/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
   </head>
-<body>
+<body data-spy="scroll" data-target="#navbar-main">
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-default navbar-fixed-top navbar-expanded" role="navigation">
+<nav id="navbar-main" class="navbar navbar-default navbar-fixed-top navbar-expanded" role="navigation">
   <div class="container">
     <div class="navbar-header">
        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
