--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -340,7 +340,7 @@ Contact us for affordable pricing!
 
 <div class="container" id="contact">
 
-  <form class="well form-horizontal" action=" " method="post"  id="contact_form">
+  <form class="well form-horizontal" action="https://formspree.io/lifestyleptllc@aol.com" method="POST"  id="contact_form">
 
       <!--add API for Google Maps-->
 
@@ -352,7 +352,7 @@ Contact us for affordable pricing!
       <div class="col-md-4 inputGroupContainer">
         <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input  name="first_name" placeholder="First Name" class="form-control"  type="text">
+            <input  name="first_name" name="first_name" placeholder="First Name" class="form-control"  type="text">
         </div>
       </div>
     </div>
@@ -364,7 +364,7 @@ Contact us for affordable pricing!
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+  <input name="last_name" name="last_name"placeholder="Last Name" class="form-control"  type="text">
     </div>
   </div>
 </div>
@@ -375,7 +375,7 @@ Contact us for affordable pricing!
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-  <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+  <input name="email" placeholder="E-Mail Address" name="_replyto" class="form-control"  type="text">
     </div>
   </div>
 </div>
@@ -413,7 +413,7 @@ Contact us for affordable pricing!
 <div class="form-group">
   <label class="col-md-4 control-label"></label>
   <div class="col-md-4">
-    <button type="submit" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
+    <button type="submit" value="Send" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
   </div>
 </div>
 
