fixed sizing of testimonial panes added margin to all p's but focusing on team spacing

--- a/HTML/main3.html
+++ b/HTML/main3.html
@@ -312,6 +312,7 @@ Contact us for affordable pricing!
   </div>
 </div>
 
+
 <div class="testsec col-sm-4">
   <button class="accordion">
     <img class="rounded testpic" src="../Assets/images/Stacysized.jpg">
@@ -335,6 +336,7 @@ Contact us for affordable pricing!
   </div>
 </div>
 
+<div class="clearfix visible-sm-block"></div>
 
 <!-- CONTACT FORM -->
 
